k8s/ingress/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-crypto-api
  namespace: crypto-monitoring
spec:
  stripPrefix:
    prefixes:
      - /crypto/api
    forceSlash: false
