k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-monitoring-ingress
  namespace: crypto-monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: crypto-monitoring-strip-crypto-api@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /crypto/api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /crypto
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
